update main() to reference Java 22